Add a second postscript to pronouns musing.

--- a/pronouns-2019-09-15.md
+++ b/pronouns-2019-09-15.md
@@ -75,7 +75,14 @@ We shall see.
 ---
 
 Postscript: As my students know, I don't always do a good job of getting
-pronouns right.  Know that I'm trying my best!
+pronouns right.  Please know that I'm trying my best!
+
+---
+
+Postscript: I suppose if I were a more responsible person, I'd start
+looking for the most recent scholarship on inclusion and pronoun use.
+However, I'm not teaching this year, so I think I'll leave that deeper
+exploration until closer to the time I next teach.
 
 ---
 
@@ -100,4 +107,4 @@ Michelle.  I have also earned the title.
 
 ---
 
-*Version 0.1 of 2019-09-15.*
+*Version 0.2 of 2019-09-15.*
