--- a/pronouns-2019-09-15.md
+++ b/pronouns-2019-09-15.md
@@ -1,16 +1,17 @@
 Pronouns
 ========
 
-*Topics/tags: [Autobiographical](index-autobiographical), academia, teaching*
+*Topics/tags: [Teaching](index-teaching), autobiographical, academia*
 
 Over the past decade or so in academia, it's become common practice
 to announce your pronouns when you meet a group for the first time.
-The practice is designed, in part, to make it more comfortable for 
-those whose pronouns don't match their appearance to be addressed
-appropriately.  And, as we all know, addressing people appropriately
-shows respect [1].  For folks like myself who present as the same
-gender as they identify, announcing your gender pronouns can make it
-easier for others to announce their pronouns.
+The practice is designed, in part, to make it more comfortable for
+those whose pronouns don't necessarily match their appearance to
+explain how to address them appropriately.  And, as we all know,
+addressing people appropriately shows respect [1].  For folks like
+myself who present as the same gender as they identify, announcing
+your gender pronouns can make it easier for others to announce their
+pronouns.
 
 My own practice with asking students to announce pronouns has evolved
 over the years.  Like many, I used to require it.  But then I learned
@@ -36,7 +37,7 @@ say, "If you must address me by last name [4], please address me as
 
 I self-identify as a culturally Jewish, cisgender, heterosexual,
 overweight male.  At least three of those aspects give me cultural
-capital.  And so I generally say something like,
+capital.  So I generally say something like,
 
 > I use he/him/his pronouns.  If you must address me by last name,
 please call me "Mr. Rebelsky", "Professor Rebelsky", or "Dr.
@@ -45,14 +46,15 @@ likely to do the same in response.  That is, if you just call me
 "Professor", I will just call you "Student".
 
 I've been starting to rethink that statement, as well as my practices.
-I've begun to wonder whether I should just switch to a gender-neutral
-pronoun for everyone I discuss, or perhaps do without pronouns
-altogether.  Would that make my classroom more inclusive?  I'm not
-sure.  I must also admit that I consider it a bit dishonest to apply
-"they/them/theirs" to myself because those pronouns are typically
-reserved for those who do not identify on the gender binary, and,
-as I said, I identify as male.  Let's see, what would my statement
-look like if I tried to incorporate these ideas?
+In particular, I've begun to wonder whether I should just switch
+to a gender-neutral pronoun for everyone I discuss, or perhaps do
+without pronouns altogether.  Would that make my classroom more
+inclusive?  I'm not sure.  I must also admit that I consider it a
+bit disingenuous to apply "they/them/theirs" to myself because those
+pronouns are typically reserved for those who do not identify on
+the gender binary, and, as I said, I identify as male.  Let's see,
+what would my statement look like if I tried to incorporate these
+ideas?
 
 > I discourage the use of pronouns, particularly gendered pronouns.
 If you use pronouns for me, I prefer that you use they/them/theirs,
@@ -107,4 +109,4 @@ Michelle.  I have also earned the title.
 
 ---
 
-*Version 0.2 of 2019-09-15.*
+*Version 1.0 of 2019-09-15.*
