Update go upgrades musing.

--- a/upgrades-2019-10-01.md
+++ b/upgrades-2019-10-01.md
@@ -3,14 +3,17 @@ The joy of upgrades
 
 *Topics/tags: [Rants](index-rants), technology*
 
-Today, Grinnell upgraded its Exchange server to use two-factor authentication
-with Duo [1].  I thought I had prepared myself.  I've been using Duo for
-remote login since the spring.  I checked [the list of supported clients](https://grinco.sharepoint.com/sites/its/ServiceCatalogPages/Multi%20Factor%20Authentication%20(MFA).aspx [2]).
-Both iOS mail and macOS mail seemed to be supported.  I'm pretty sure that
-I even called over to ITS to re-verify, especially since my colleagues
-were getting email messages that their clients were not supported.
+Yesterday, Grinnell upgraded its Exchange server to use two-factor
+authentication with Duo [1].  I thought I had prepared myself.  I've
+been using Duo for remote login since the spring.  I checked [the
+list of supported
+clients](https://grinco.sharepoint.com/sites/its/ServiceCatalogPages/Multi%20Factor%20Authentication%20(MFA).aspx
+[2]).  Both iOS mail and macOS mail seemed to be supported.  I'm
+pretty sure that I even called over to ITS to re-verify, especially
+since my colleagues were getting email messages that their clients
+were not supported.
 
-This morning, I went to check my email on my iPhone [3].  I kept
+In the morning, I went to check my email on my iPhone [3].  I kept
 getting an "Incorrect Password" message [4].  It took me a few
 minutes to remember that today was the rollout day for two-factor
 authentication [5].  Instead of bothering the folks at ITS, I decided
@@ -33,15 +36,46 @@ authorization framework that the College wants.  I therefore need
 to upgrade to 10.14 (Mojave).  Whee!  I'd swear that information
 wasn't on the page when I checked it a month or so ago.
 
-I feel somewhat foolish upgrading to Mojave when Catalina is coming
-out in a few weeks.  But I don't really have any options [8].  And
+I felt somewhat foolish upgrading to Mojave when Catalina is coming
+out in a few weeks.  But I didn't really have any options [8].  And
 I tend to be a late adopter, so I would not have been likely to upgrade
 to Catalina immediately in any case [9].
 
-I'm not sure why, but upgrading is a slow process.  Once I downloaded
+I'm not sure why, but upgrading was a slow process.  Once I downloaded
 and ran the installer [10], it indicated that installation would take
-4.5 hours.  Whee!  At least I could pretend to do other work while it
+4.5 hours.  Whee!  Why so long?  It appears that my Internet connection
+is slow, slow enough that I couldn't even run an Internet speed test.
+I assume that the various email issues on campus are using up a surprising
+amount of bandwidth.  At least I could pretend to do other work while it
 was installing [11].
+
+After an hour of watching the expected time increase, I reset my
+Internet connection.  That made a huge difference.  When I restarted
+the installer [12], the time remaining dropped from five hours to
+fifteen minutes.  The speed went from "unable to contact server"
+to 50 Megabits per second.  Things were looking up.  And then the
+damn connection reset itself.  When I reconnected, the Internet
+speed was back down to 3.2 Mbps download.  In fact, the Mojave
+installer couldn't even contact the installation server.  Have I
+mentioned how much I hate computers?  Anyway, it appears that [it's
+a common
+problem](https://www.iphonetopics.com/the-recovery-server-could-not-be-contacted-mojave/).
+I didn't need to do anything.  But when I connected again, I was
+back to a four-plus-hour download.
+
+Eventually, I gave up and came home.  I looked at some of my backup drives
+and found a Mojave installer.  It's likely not the latest version of Mojave,
+but it struck me that installing and upgrading would be faster than
+trying to install over the Interweb.  Installing the OS still
+took about an hour.  The updates were 2.61 GB which, on my slow ISP,
+took a bit over an hour to download.  Whee!  There were a few points
+where that time went up, too.  But they were short.
+
+I tried to do some other work while waiting for it to download the
+upgrade.  One of the first things I discovered was that the Xcode
+command-line tools that I rely on, like `git`, were no longer installed.
+I didn't want to waste the extra bandwidth waiting for them to download,
+so I had to figure out other tasks to undertake.  Bleh.
 
 ---
 
@@ -73,6 +107,8 @@ quickly than normal.
 [10] Or part of the installer.
 
 [11] Writing this musing falls within that model.
+
+[12] It quit when I disconnected from the Internet.
 
 ---
 
