--- a/upgrades-2019-10-02.md
+++ b/upgrades-2019-10-02.md
@@ -4,72 +4,80 @@ The joy of upgrades
 *Topics/tags: [Rants](index-rants), technology*
 
 Yesterday, Grinnell upgraded its Exchange server to use two-factor
-authentication with Duo [1].  I thought I had prepared myself.  I've
-been using Duo for remote login since the spring.  I checked [the
-list of supported
+authentication with Duo [1].  That makes sense.  Schools [2] are
+experiencing a huge uptake in phishing, and 2FA is an appropriate
+response.
+
+I thought I had prepared myself.  I've been using Duo for remote
+login since the spring.  I checked [the list of supported
 clients](https://grinco.sharepoint.com/sites/its/ServiceCatalogPages/Multi%20Factor%20Authentication%20(MFA).aspx
-[2]).  Both iOS mail and macOS mail seemed to be supported.  I'm
+[3]).  Both iOS mail and macOS mail seemed to be supported.  I'm
 pretty sure that I even called over to ITS to re-verify, especially
 since my colleagues were getting email messages that their clients
-were not supported.
+were not supported.  When Duo Mobile decided that my iPhone was too
+old [4], I even got one of the key fobs.
 
-In the morning, I went to check my email on my iPhone [3].  I kept
-getting an "Incorrect Password" message [4].  It took me a few
-minutes to remember that today was the rollout day for two-factor
-authentication [5].  Instead of bothering the folks at ITS, I decided
+Yesterday morning, I went to check my email on my iPhone.  I kept
+getting an "Incorrect Password" message [5].  It took me a few
+minutes to remember that yesterday was the rollout day for two-factor
+authentication [6].  Instead of bothering the folks at ITS, I decided
 to try dealing with the issue myself.  I found that removing my
-Exchange account and re-adding it solved the problem [6].  Yay me! 
+Exchange account and re-adding it solved the problem [7].  Yay me! 
 
 While I was doing that, I was reading email on my Mac.  The standard
 Macintosh email client seemed to be working fine.  Or so I thought.
 Then came the afternoon.  It, too, was now issuing error messages.
-I hate deleting my Grinnell Exchange account from my Mac because
-it usually takes a day or two to rebuild the mailbox.  So I called ITS
-to see if there was an option other than "Delete the account and then
-add the account".  There wasn't.  So I deleted the account, and my Mac
-deleted all the corresponding email from my hard drive [7].
+I considered the same approach.  However, I hate deleting my Grinnell
+Exchange account from my Mac because it usually takes a day or two
+to rebuild the mailbox.  So I called ITS to see if there was an
+option other than "Delete the account and then add the account".
+There wasn't.  So I deleted the account, and my Mac deleted all the
+corresponding email from my hard drive [8].
 
 Then I went to add the account back.  And, well, I couldn't.  I
 kept getting authorization failures.  So I called ITS back.  And I
 learned that Mail.app on macOS 10.12 (Sierra) does not support the
-authorization framework that the College wants.  I therefore need
+authorization framework that the College wants.  Hence, I needed
 to upgrade to 10.14 (Mojave).  Whee!  I'd swear that information
 wasn't on the page when I checked it a month or so ago.
 
 I felt somewhat foolish upgrading to Mojave when Catalina is coming
-out in a few weeks.  But I didn't really have any options [8].  And
+out in a few weeks.  But I didn't really have any options [9].  And
 I tend to be a late adopter, so I would not have been likely to upgrade
-to Catalina immediately in any case [9].
+to Catalina immediately in any case [10].
 
 I'm not sure why, but upgrading was a slow process.  Once I downloaded
-and ran the installer [10], it indicated that installation would take
-4.5 hours.  Whee!  Why so long?  It appears that my Internet connection
-is slow, slow enough that I couldn't even run an Internet speed test.
-I assume that the various email issues on campus are using up a surprising
-amount of bandwidth.  At least I could pretend to do other work while it
-was installing [11].
+and ran the installer [11], it indicated that installation would
+take 4.5 hours, most of which seemed to be downloading the rest of
+the OS.  Why so long?  It appears that my Internet connection is
+slow, slow enough that I couldn't even run an Internet speed test.
+I assume that the various email issues on campus are using up a
+surprising amount of bandwidth.  At least I could pretend to do
+other work while it was installing [12].
 
 After an hour of watching the expected time increase, I reset my
 Internet connection.  That made a huge difference.  When I restarted
-the installer [12], the time remaining dropped from five hours to
-fifteen minutes.  The speed went from "unable to contact server"
-to 50 Megabits per second.  Things were looking up.  And then the
-damn connection reset itself.  When I reconnected, the Internet
-speed was back down to 3.2 Mbps download.  In fact, the Mojave
-installer couldn't even contact the installation server.  Have I
-mentioned how much I hate computers?  Anyway, it appears that [it's
-a common
+the installer [14], the time remaining dropped from five hours to
+fifteen minutes.  My download speed went from "unable to contact
+server" to 50 Megabits per second.  Things were looking up.  And
+then the damn connection reset itself.  When I reconnected, the
+download speed was back down to 3.2 Mbps download.  In fact, the
+Mojave installer couldn't even contact the installation server.
+Have I mentioned how much I hate computers?  Anyway, it appears
+that [it's a common
 problem](https://www.iphonetopics.com/the-recovery-server-could-not-be-contacted-mojave/).
-I didn't need to do anything.  But when I connected again, I was
+Fortunately, I didn't need to do any of those steps.  After trying three
+times, I was able to connect.  But when I connected again, I was
 back to a four-plus-hour download.
 
-Eventually, I gave up and came home.  I looked at some of my backup drives
-and found a Mojave installer.  It's likely not the latest version of Mojave,
-but it struck me that installing and upgrading would be faster than
-trying to install over the Interweb.  Installing the OS still
-took about an hour.  The updates were 2.61 GB which, on my slow ISP,
-took a bit over an hour to download.  Whee!  There were a few points
-where that time went up, too.  But they were short.
+Eventually, I gave up and went home.  I looked through some of my
+backup drives and found a Mojave installer.  I didn't expect it to
+be for the most recent version of Mojave, but it struck me that
+installing and upgrading would be faster than trying to install
+over the Interweb.  Installing the OS still took about an hour.
+The updates were 2.61 GB which, on my slow ISP, took a bit over an
+hour to download.  Whee!  There were a few points where that time
+went up, too.  But they were short.
 
 I tried to do some other work while waiting for it to download the
 upgrade.  One of the first things I discovered was that the Xcode
@@ -77,39 +85,115 @@ command-line tools that I rely on, like `git`, were no longer installed.
 I didn't want to waste the extra bandwidth waiting for them to download,
 so I had to figure out other tasks to undertake.  Bleh.
 
+Once I got everything set up, I added my Grinnell Exchange account.
+Then I realized that I needed to upgrade my [GPG
+software](https://gpgtools.org/).  That worked reasonably well.  It
+took a bit to find my verification code, which was buried in my
+email.  But when I uploaded my keys to the server and tried to click
+the verification links in email, verification failed.  Since verification
+worked for my Gmail account, I blame Proofpointless for munging the
+verification URL.
+
+The experience of adding GPG tools to my mail client reminded me that
+(a) I really can't use Exchange on the Mac, since it doesn't support
+PGP and (b) I'll need to delay the upgrade to Catalina until those
+tools are updated to support Catalina.
+
+This morning, I was reminded of why I hate the strategy of "delete your
+account and then add it again".  Even after a night of updating, my email
+client says that there are 20K+ messages to download.  
+
+Altogether, I lost about a day of sabbatical time.  Nonetheless, I'm glad 
+that I'm on sabbatical.  If I'd been in the midst of classes, dealing with
+lost work time and difficult-to-access email would have been unbearable.
+I send sympathy to my colleagues and students who were in that situation.
+
+I'm also someone who is (or should be) technically informed.  I expect
+that this was even harder for folks who are less informed.  Or perhaps
+they just passed the problems on to someone else.
+
+I'd like to be able to blame someone for all of this.  But there's
+not really anyone to blame.  I don't blame ITS.  As I noted, I know
+that we need two-factor authentication.  And I'm not sure that
+there's a better time to do an upgrade like this.  You need a time
+in which people are on campus since fixing issues often requires
+face-to-face contact.  The end of the semester is bad; people are
+racing to finish too many things.  The beginning of the semester
+is equally bad.  And they didn't want to delay too long.  So this
+seems like an appropriate time to roll out DA.  And I know that
+they made sure to have a large cadre of people available to help.
+I don't blame myself.  I did the things that I was supposed to do
+in advance.  I don't blame Apple for not having the appropriate
+Microsoft authentication in macOS 10.12; I'm not sure what state
+it had.  I don't blame Microsoft for a strange authentication system
+[15]; their clients clearly wanted something like this.  Should ITS
+have been aware of these likely problems?  It would have been nice.
+But my sense is that the problems were not well documented.  The
+one thing I really would have liked was an easily available self-help
+page with easy-to-find and up-to-date information.  For example,
+it took some time to remember that the instructions for configuring
+email accounts on iPhones are in the student setup documentation,
+and those instructions don't include the Duo issues.
+
+Are there things that we can take away from all of this?  The experience
+suggests that technology rarely works as easily as you expect.  But I'm
+pretty sure that people knew that already.  That you need to explore a
+wide range of situations?  That's also something I expect people know.
+But situations are difficult to predict.  For example, you might find
+that you can connect to the Duo-enhanced [16] server with iOS mail, but 
+not realize that it only works if you did not have a prior account set
+up on that server.  That people [17] should run up-to-date software?
+There are certainly reasons to run older software, from concern about the
+effects of upgrading [18] to an inability to upgrade because of hardware
+limitations [19].
+
 ---
 
 [1] And, perhaps, other services.
 
-[2] That document is behind a password wall.
+[2] Not just Grinnell.
 
-[3] It's an iPhone 5S.  It's starting to get old enough that Duo doesn't
-quite trust it.
+[3] That document is behind a password wall.
 
-[4] That message is paraphrased.
+[4] It's an iPhone 5S.  It's starting to get old enough that Duo doesn't
+quite trust it.  That is, Duo reports that I need to upgrade to iOS 13.
+However, iOS 13 doesn't run on the iPhone 5S.  12.4.1 is the currently
+supported version.
 
-[5] Or maybe it was yesterday.
+[5] That message is paraphrased.
 
-[6] Further conversations with ITS suggest that (a) I chose the appropriate
+[6] Or maybe it was yesterday.
+
+[7] Further conversations with ITS suggest that (a) I chose the appropriate
 process and (b) the need to remove/reinstall the account is a known issue,
 but Apple does not have it clearly documented.
 
-[7] At least I think it did.  I suddenly had much more space available
+[8] At least I think it did.  I suddenly had much more space available
 on the hard drive.
 
-[8] That's not quite true.  I could use Outlook for Mac.  That seems less
+[9] That's not quite true.  I could use Outlook for Mac.  That seems less
 palatable to me than upgrading my OS.  Maybe I should give Outlook
 a chance.  But not today.
 
-[9] Sidecar seems to be an appealing technology, so I may upgrade more
+[10] Sidecar seems to be an appealing technology, so I may upgrade more
 quickly than normal.
 
-[10] Or part of the installer.
+[11] Or part of the installer.
 
-[11] Writing this musing falls within that model.
+[12] Writing this musing falls within that model.
 
-[12] It quit when I disconnected from the Internet.
+[14] It quit when I disconnected from the Internet.
+
+[15] Well, maybe a bit.
+
+[16] sic.
+
+[17] That is, me.
+
+[18] As in this set of experiences.
+
+[19] As in my iPhone.
 
 ---
 
-*Version 0.1 of 2019-10-01.*
+*Version 0.2 of 2019-10-01.*
