Add note about Web issues to upgrade musing.

--- a/upgrades-2019-10-02.md
+++ b/upgrades-2019-10-02.md
@@ -99,6 +99,17 @@ The experience of adding GPG tools to my mail client reminded me that
 PGP and (b) I'll need to delay the upgrade to Catalina until those
 tools are updated to support Catalina.
 
+Somewhere in the middle there, my Web pages stopped working correctly.
+I use UTF-8 for my page encoding.  For some reason, our server was 
+reporting that may pages were encoded in ISO-8859.  I didn't think the
+problem was associated with the email or OS upgrade, but you never
+know.  I spent some time looking around to see if the default encoding
+was set somewhere in the OS.  Eventually, I gave up and dropped a note
+to our SysAdmin.  I got the answer this morning.  It appears that another
+faculty member asked our SysAdmin to set ISO-8859 as the default
+on Apache and that broke things.  The compromise of having no default
+seems to have worked.
+
 This morning, I was reminded of why I hate the strategy of "delete your
 account and then add it again".  Even after a night of updating, my email
 client says that there are 20K+ messages to download.  
@@ -196,4 +207,4 @@ quickly than normal.
 
 ---
 
-*Version 0.2 of 2019-10-01.*
+*Version 0.3 of 2019-10-01.*
