Yet another update to the upgrades musing.  I guess it wasn't really near-final.

--- a/upgrades-2019-10-02.md
+++ b/upgrades-2019-10-02.md
@@ -114,6 +114,12 @@ This morning, I was reminded of why I hate the strategy of "delete your
 account and then add it again".  Even after a night of updating, my email
 client says that there are 20K+ messages to download.  
 
+I was also reminded why I don't like upgrading my OS.  For someo reason,
+Firefox has slowed to a crawl.  I suppose it doesn't help that I have
+more than a dozen windows open, many with a dozen or more tabs.  But
+it behaved reasonably on macOS 10.12.  I guess it's time to start 
+bookmarking or removing windows.  But it's frustrating.
+
 Altogether, I lost about a day of sabbatical time.  Nonetheless, I'm glad 
 that I'm on sabbatical.  If I'd been in the midst of classes, dealing with
 lost work time and difficult-to-access email would have been unbearable.
@@ -151,7 +157,7 @@ suggests that technology rarely works as easily as you expect.  But I'm
 pretty sure that people knew that already.  That you need to explore a
 wide range of situations?  That's also something I expect people know.
 But situations are difficult to predict.  For example, you might find
-that you can connect to the Duo-enhanced [16] server with iOS mail, but 
+that you can connect to the Duo-enhanced [6] server with iOS mail, but 
 not realize that it only works if you did not have a prior account set
 up on that server.  That people [17] should run up-to-date software?
 There are certainly reasons to run older software, from concern about the
@@ -207,4 +213,4 @@ quickly than normal.
 
 ---
 
-*Version 0.3 of 2019-10-01.*
+*Version 0.4 of 2019-10-02.*
