--- a/beatles-2019-10-05.md
+++ b/beatles-2019-10-05.md
@@ -1,56 +1,75 @@
 The Beatles
 ===========
 
-*Topics/tags: [Autobiographical](index-autobiographal) [1]*
+*Topics/tags: [Autobiographical](index-autobiographical) [1]*
 
-I was intending to post a rant today.  It's even draft.  But
-yesterday, as I was posting musing #909, my muse informed me that
-the one after that would have to be about the Beatles.  Why?  I'll
-leave that for you to figure out [2].  But what can one write about
-the Beatles that hasn't already been said?  And what can I write,
-as someone who likes the Beatles, but does not have deep musical
-knowledge [3]?  Sometimes my muse pushes me in strange directions.
-I guess what seems best to me is to just post some vignettes of my
-memories of experiences related to the Beatles.
+I was intending to post a rant today.  I even wrote a fairly
+substantial draft.  But yesterday, as I was posting musing #909,
+my muse informed me that the one after that would have to be about
+the Beatles.  Why?  I'll leave that for you to figure out [2].  But
+what can one write about the Beatles that hasn't already been said?
+And what can *I* write, as someone who likes the Beatles, but does
+not have deep musical knowledge [3]?  Sometimes my muse pushes me
+in strange directions.  I guess what seems best to me is to just
+post some vignettes of my memories of experiences related to the
+Beatles.
 
-At Eric's (?) house (down the street from Lynn, although she didn't
-live there yet), hearing that the Beatles had broken up.
+My earliest memory of the Beatles is being at one of my best friends'
+house in 1970 and hearing that the Beatles had broken up.  The scary
+part is that I can't remember his name.  I think it was Eric.  I do
+know that his house was across the street and down the road from
+Lynn's, although she didn't live there in 1970.
 
-Getting a bunch of Beatles records that one of my mom's students
-was getting rid of.  I'm pretty sure that I still have all of them,
-too.  Playing them on the old KLH stereo.  I think I have that, too.
-It's probably in Jonathan's room.
+My next memory is "inheriting" a bunch of Beatles records that one
+of my mom's students was getting rid of.  Capitol rainbow label,
+if I remember correctly.  I'm pretty sure that I still have all of
+them, too.  I also remember playing all of them on my old KLH stereo [4].
+I think I have that, too.  It's probably in Jonathan's room.
 
-In some camp experience, talking with my friends about how one could
-build a replacement for the Beatles, given that they weren't getting
-back together.
+I remember sitting in a room in summer camp, I think in the church
+across from Underwood [5], and talking to friends about how one
+could put together a replacement for the Beatles, given that it
+was pretty clear that they were not getting back together.
 
-Playing _Wings Over America_ and _Venus and Mars_ on my record player.
-I can still visualize where in my room it was.  I wish we'd been able
-to take the shelves from that room when mom moved out, but the realtor
-said that shelves installed on the wall have to stay.  I'm sure they
-just tore them down and threw them away.  I'm sure they did the same
-with the amazing wall unit that my father built, too.
+Skip forward a few years.  I remember playing _Wings Over America_,
+_Band on the Run_, and and _Venus and Mars_ on my record player.
+I can still visualize where in my room it was, on the stereo cabinet,
+underneath the wall shelves we'd gotten from my grandfather.  I
+wish we'd been able to take the shelves from that room when mom
+sold the house, but the realtor said that since the shelves were
+installed on the wall, they had to stay.  I'm sure that the buyers
+just tore them down and threw them away.  I'm sure they did the
+same with the amazing wall unit that my father built, too.  At least
+I have memories.
 
-Getting _Meaty, Beaty, Big, and Bouncy_ and decising that even though
-it was a greatest hits album, it wasn't as good as any Beatles album.
-(I'm not sure that I still have that opinion.  Both _The Who Sell
-Out_ and _Who's Next_ are definitely among my favorite albums.)
+I remember buying the Who's _Meaty, Beaty, Big, and Bouncy_ and
+deciding that even though it was a greatest hits album, it wasn't
+as good as any single Beatles album.  I'm not sure that I still
+have that opinion.  Both _The Who Sell Out_ and _Who's Next_ are
+definitely among my favorite albums.
 
-Enjoying stupid collectors editions of the albums; the red album on 
-red vinyl, the blue album on blue vinyl, the white album on white
-vinyl.  I wonder if I still have those.
+I recall enjoying stupid collectors editions of the albums; the
+red album on red vinyl, the blue album on blue vinyl, the white
+album on white vinyl.  I wonder if I still have those.
 
-Being in the Village junior year of high school and hearing that John
-Lennon had been shot.
+I remember sitting in the Village [6] in my junior year of high school
+and hearing that John Lennon had been shot.  Everyone was in shock.
 
-Not being able to listen to the Beatles for the next five years or so,
-not because it made me sad, but because the amount of Beatles music that
+One of the side effects of that was that I didn't really feel able
+to enjoy the Beatles for the next five years or so.  It's not because
+it made me sad. Rather, it's that the amount of Beatles music that
 was played that month put me in overload.
 
-Singing "I saw him standing there" to William when he was just born [4].
+Skip forward a few more years, and I recall singing "I saw him
+standing there" to William when he was just born [7].  I sang it
+to him in the room with Michelle.  I also sang it to him in the
+apartment in Waterville.
 
-I think that's enough for now.  I hope my muse is satistifed [5].
+I think that's enough for now.  I hope my muse is satisfied [8].
+I also hope she'll rethink her choices the next time she decides
+to force me to impose random memories on you and myself [9].  At
+least she got to make her joke, and there would not be an opportunity
+to do so.
 
 ---
 
@@ -60,10 +79,20 @@ I think that's enough for now.  I hope my muse is satistifed [5].
 
 [3] Or writing chops, for that matter.
 
-[4] Sorry William; I hope that my singing voice didn't scar you.
+[4] Were KLH stereos ever good?  I'm not sure.  I still enjoyed it.
 
-[5] She seems to be.
+[5] Underwood elementary school, not Underwood Deviled Ham.
+
+[6] The Village was a school-within-a-school in my too-large high
+school.  For some reason, I recall that Summerhill principles were
+at play, but I could be wrong.
+
+[7] Sorry William; I hope that my singing voice didn't scar you.
+
+[8] She seems to be.
+
+[9] I'm not sure.
 
 ---
 
-*Version 0.1 of 2019-10-04.*
+*Version 1.0 of 2019-10-05.*
