Fix latest musing before real release.

--- a/grincam-2019-11-06.md
+++ b/grincam-2019-11-06.md
@@ -57,7 +57,10 @@ is a grin.  And "grin" rhymes with "green".
 Postscript: I'm amazed at how the end notes got away from me in this
 musing.  It's clear that the dad-joke region of my brain hasn't been 
 getting enough attention and insisted on inserting too much of its
-perspective at the end of the end notes.
+perspective at the end of the end notes.  And, because of the time
+required for those additions, what was supposed to be a quick musing
+ended up taking much longer than I had intended.  I guess the joke's
+on me.
 
 ---
 
