Add new registration index.

--- a/ccb-2017F.md
+++ b/ccb-2017F.md
@@ -1,6 +1,8 @@
 Cuts, closes, and balances for Fall 2017
 ========================================
 
+*Topics/tags: [Registration](index-registration), disjoint*
+
 [Preregistration for Fall 2017](prereg-2017F) is now over.  Cuts, closes,
 and balances are now over, and add/drop period has started.  Do you wonder 
 how things went?  Let's see ...
@@ -203,4 +205,6 @@ changes were made.
 
 ---
 
-*Version 1.0 of 2017-05-08.*
+*Version 1.0 released 2017-05-08.*
+
+*Version 1.0.1 of 2019-11-17.*
